Fix an issue related to the scrollbar

--- a/src/main.css
+++ b/src/main.css
@@ -51,8 +51,6 @@
 
   }
 
-
-  
 }
 
 @layer components {
@@ -60,5 +58,7 @@
     @apply bg-fifth border-solid border-2 border-fifth rounded-lg p-2 w-full dark:brightness-200 brightness-110 ;
   }
 
-  
+  html {
+    @apply scroll-pt-16 md:scroll-pt-0
+  }
 }
